<resources>
    <string name="app_name">ToolBarDemo1</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="about_us">About Us</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="send">Send</string>
    <string name="drafts">Drafts</string>
    <string name="all_mail">All Mail</string>
    <string name="trash">Trash</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="inbox_fragment">INBOX FRAGMENT</string>
    <string name="draft_fragment">DRAFT FRAGMENT</string>
    <string name="all_mail_fragment">ALL MAIL FRAGMENT</string>
    <string name="send_fragment">SEND FRAGMENT</string>
    <string name="spam_fragment">SPAM FRAGMENT</string>
    <string name="starred_fragment">STARRED FRAGMENT</string>
</resources>
