<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/starred"
            android:icon="@drawable/ic_star"
            android:title="@string/starred" />
        <item
            android:id="@+id/send"
            android:icon="@drawable/ic_send"
            android:title="@string/send" />
        <item
            android:id="@+id/drafts"
            android:icon="@drawable/ic_drafts"
            android:title="@string/drafts" />
        <item android:title="Advance">
            <menu>
                <item
                    android:id="@+id/all_mail"
                    android:icon="@drawable/ic_email24dp"
                    android:title="@string/all_mail" />
                <item
                    android:id="@+id/trash"
                    android:icon="@drawable/ic_trash"
                    android:title="@string/trash" />
                <item
                    android:id="@+id/spam"
                    android:icon="@drawable/ic_spam"
                    android:title="Spam" />
            </menu>
        </item>
    </group>


</menu>